--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,6 @@
     "@babel/runtime": "^7.5.5",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
     "@vue/babel-preset-jsx": "^1.4.0",
-    "ant-design-vue": "^1.7.2",
     "axios": "0.19.0",
     "china-area-data": "^5.0.1",
     "clipboard": "^2.0.11",
@@ -42,9 +41,9 @@
     "vue-scrollactive": "^0.8.0",
     "vuedraggable": "^2.24.3",
     "vuex": "3.1.1",
-    "vxe-table": "^2.9.17",
-    "vxe-table-plugin-antd": "^1.8.10",
-    "xe-utils": "^2.4.8"
+    "vxe-table": "^3.6.13",
+    "vxe-table-plugin-element": "^1.11.4",
+    "xe-utils": "^3.5.11"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
@@ -68,8 +67,6 @@
     "file-loader": "4.2.0",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "^4.5.0",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-notifier": "5.4.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
